--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             </div>
             
             <!-- Hidden Fields -->
-            <input type="hidden" id="code" name="code" value="bharathsaiy@gmail.com">
+            <input type="hidden" id="Referred By" name="Referred By" value="bharathsaiy@gmail.com">
             <input type="hidden" id="Timestamp" name="Timestamp">
             
             <!-- Subscribe Button -->
